# Mini-chat-Django-Channels

./: README.md  main.py  pyproject.toml  requiremenets.txt
chat/: admin.py  apps.py  consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_profile_last_seen_alter_profile_user.py  0004_chatmember.py  0005_message_audio_message_is_deleted_message_reply_to_and_more.py  0006_message_file_pinnedmessage.py  0007_reaction.py
chat/templatetags/: chat_filters.py  chat_tags.py
config/: asgi.py  settings.py  urls.py
media/voices/: blob  blob_GMGrYRw  blob_OPTSLI7  blob_RFVf40X  blob_eAWVg8O  blob_gKBHWqh  blob_hwC486V
static/chat/: manifest.json
static/chat/css/: chat.css
static/chat/js/: chat.js
templates/: base.html
templates/chat/: avatar.html  chat.html  create_group.html  index.html  login.html  register.html
